welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: value aps is not a member of object Math
	if (Math.aps(a-b)>=10 || Math.aps(a-c)>=10 || Math.aps(b-c)>=10) {
                 ^