welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
	if (Math.aps(a-b)>=10 || Math.aps(a-c)>=10 || Math.aps(b-c)>=10) {
		return true 
	}
	else {return false}
}
